# SWE-bench-docker

./: .style.yapf  Makefile  conan_2.jsonl  generate_report.py  pandas.jsonl  pyproject.toml  run_dockerfile_generator.py  run_evaluation.py  run_evaluations.py  run_instance_tests.py  run_single_instance.py  schema.py
SWE-bench/: setup.py
SWE-bench/docs/20240415_eval_bug/: sweep_conda_links.py
SWE-bench/inference/: run_api.py  run_live.py  run_llama.py
SWE-bench/inference/llamao/: distributed_attention.py  modeling_flash_llama.py
SWE-bench/inference/make_datasets/: bm25_retrieval.py  create_instance.py  create_text_dataset.py  eval_retrieval.py  tokenize_dataset.py  utils.py
SWE-bench/swebench/: __init__.py
SWE-bench/swebench/collect/: build_dataset.py  build_dataset_ft.py  get_tasks_pipeline.py  get_top_pypi.py  print_pulls.py  utils.py
SWE-bench/swebench/harness/: constants.py  context_manager.py  engine_evaluation.py  engine_validation.py  run_evaluation.py  utils.py
SWE-bench/swebench/metrics/: constants.py  conversion.py  getters.py  log_parsers.py  metrics.py  monitor.py  report.py
SWE-bench/swebench/versioning/: constants.py  get_versions.py  train_baby.csv  utils.py
docker/astropy__astropy/: Dockerfile
docker/conan-io__conan/: Dockerfile
docker/pandas-dev__pandas/: Dockerfile
docker/pyenv/: Dockerfile-pyenvs
swebench_docker/: constants.py  context_manager.py  dockerfile_generator.py  evaluate_instance.py  run_docker.py  utils.py
templates/: Dockerfile.conda_repository
tina_logs/: README.md  report.json  summary.json
(+23 files in other folders)
